--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+app.host=http://localhost:8080
